syntax = "proto3";

package application;

message ApplicationRequest {
    string name = 1;
    bytes executable = 2;
    string executeCommand = 3;
    string data = 4;
    string path = 5;
    repeated string argv = 6;
    repeated string envv = 7;
}

message InputRequest {
    string input = 1;
}

message ApplicationResponse {
    string result = 1;
}

service StreamService {
    rpc StartApplication (ApplicationRequest) returns (stream ApplicationResponse);

    // rpc StreamInput(stream InputRequest) returns (stream ApplicationResponse);
}
