syntax = "proto3";

option go_package = "github.com/rmgen/RAE";

package protobuf;

service StreamService {
    rpc StartApplication (Request) returns (stream Response);

    rpc StreamInput(stream Input) returns (stream Response);
}

message Request {
    string name = 1;
    bytes executable = 2;
    string executeCommand = 3;
    string data = 4;
    string path = 5;
    repeated string argv = 6;
    repeated string envv = 7;
}

message Input {
    string input = 1;
}

message Response {
    string result = 1;
}